# Jan3126-Builder

./: .gitignore  .mcp.json  LICENSE  QDRANT_SETUP_COMPLETE.md  README.md  test_qdrant_setup.py
.claude/: settings.json  settings.local.json.bak  settings.local.json.example
.claude/commands/: bmad_bmb_agent_agent-builder.md  bmad_bmb_agent_workflow-builder.md  bmad_bmb_module.md  bmad_bmb_workflow.md  bmad_bmm_agent_tech-writer_tech-writer.md  bmad_bmm_create-prd.md  bmad_editorial-review-structure.md  bmad_help.md
.claude/skills/: README.md
.cursor/commands/: bmad_bmb_agent.md  bmad_bmb_agent_module-builder.md  bmad_editorial-review-prose.md  bmad_review-adversarial-general.md
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json  post-create.sh
_bmad-output/ux-artifacts/: AI-REFERENCE-GUIDE.md  README.md
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml  project-config.yaml  task-manifest.csv  workflow-manifest.csv
_config/: project-config.yaml
docs/: BMAD_CURSOR_INTEGRATION_EXPLAINED.md  BMAD_DOCTRINE_INTEGRATION_SUMMARY.md  VIRGIN_DEVCONTAINER_CHECKLIST.md  VIRGIN_DEVCONTAINER_QUICK_REFERENCE.md
mcp-servers/qdrant-mcp/: README.md  SETUP_SUMMARY.md  init_wabuilder_collection.py  mcp-config.json  pyproject.toml  requirements.txt  server.py  setup_payload_indexes.py  test_full_rag_pipeline.py  test_mcp_server.py  test_qdrant_connection.py  test_simple.py
scripts/: bmad-setup.py  prepare-virgin-devcontainer.sh  sync-behavioral-rules-to-template.sh
templates/: CLAUDE.md.template
(+331 files in other folders)
