[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qdrant-mcp-server"
version = "0.1.0"
description = "MCP server for Qdrant Cloud vector database with multi-tenant support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.7.0",
    "mcp>=0.9.0",
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0"
]

[project.scripts]
qdrant-mcp = "server:main"
